[tool.poetry]
name = "ascii-grid-to-png"
version = "0.1.0"
description = "A script to convert ASCII raster files to PNG"
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
numpy = "^1.18.1"
scipy = "^1.4.1"
matplotlib = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
flake8 = "^3.7.9"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
